Changes
=======

0.14 (unreleased)
-----------------

- Updated URL of bug tracker.


0.13 (2012-01-30)
-----------------

- Added a selenese assert type 'list' and added it to the window management
  query methods.

- API expansion: added ``openWindow``.

- API change: filter the result of ``getAllWindowNames`` to ignore 'null'.

- backwards-compatible API change: ``selectWindow`` now selects the main
  window also when passed the window id ``None`` or no argument at all.

- pinned compatible ZTK version to 1.0.1, grok version to 1.2.1, generally
  pinned all software packages used to consistent versions for this package's
  own testing


0.12 (2011-11-29)
-----------------

- API expansion: added ``getAllWindow*`` and ``selectWindow``.


0.11 (2011-09-15)
-----------------

- Added some notes how to test a Zope 2 WSGI application.

- Described how to test a Zope 2/Plone application if using `plone.testing`
  to set up test layers.


0.10.1 (2011-02-02)
-------------------

- Improvements on the README.

- Wrote a quick start section for packages using ZTK but using
  ``zope.app.wsgi.testlayer`` instead of ``zope.app.testing``.

- Allowed to use `regexp` as pattern prefix for regular expressions
  additionally to `regex` to be compatible with the docstring and the
  Selenium documentation.


0.10 (2011-01-18)
-----------------

- Script that generates python tests from Selenium HTML tables.
  Reused from KSS project, courtesy of Jeroen Vloothuis, original author.

- Using a URL of `Selenium RC` in README where version 1.0.3 can be
  downloaded (instead of 1.0.1) which works fine with Firefox on Mac OS X,
  too.

0.9 (2010-12-28)
----------------

- Provide integration with the recent testlayer approach
  (zope.app.appsetup/zope.app.wsgi) used by Grok (#8260).
- Provide integration with plone.testing
- Make browser and RC server configurable (#6484).
- Show current test case in command log (#7876).
- Raise readable error when connection to RC server fails (#6489).